%% 05-working-slot.mmd
%% What replaced the five-state machine: a task is queued, or it holds the working
%% slot, or it is neither. There is no third place for it to be, and so no state
%% column that can disagree with where the task actually is.
stateDiagram-v2
    direction LR

    state "Queued<br/>(a message_queue row)" as Queued
    state "Paused<br/>(in_process = 1)" as Paused
    state "Working<br/>(the in-memory slot)" as Working
    state "Summary phase<br/>(same slot, priority raised<br/>to [TRUTHFUL-REPORT])" as Summary

    [*] --> Queued : send() admits it

    Queued --> Working : advance() -- slot empty,<br/>or this head STRICTLY beats<br/>the working task

    Working --> Paused : displaced by a higher-priority<br/>arrival. stop_remote_execution first,<br/>THEN the swap -- a stop that fails<br/>UNEXPECTEDLY leaves everything as it was.<br/>A remote that refuses BY DESIGN is recorded<br/>on uncancelled_displacements and the swap<br/>proceeds anyway.<br/><br/>Also reached by a FAILED DELIVERY:<br/>_requeue puts the task back, paused.

    Paused --> Working : advance() picks it before other tasks<br/>OF ITS OWN LABEL, and never before a<br/>different one. No two labels share a rank<br/>today, but the scoping is what makes every<br/>future pair safe.<br/><br/>The prompt depends on what resumed --<br/>a plain pause gets one line, "Resume your<br/>previous [RESEARCH]." A summary phase gets<br/>the full report request again.

    Working --> Summary : the work finished and the label<br/>was [RESEARCH] -- it owes a summary,<br/>and the summary is a SECOND exchange<br/>in the SAME slot, not a queued message

    Summary --> [*] : summary pushed to the Caller<br/>as [TRUTHFUL-REPORT]

    Working --> [*] : label_caps.reply_behavior:<br/>[QUERY] -> [MESSAGE-RESPONSE],<br/>[ERROR] -> [MESSAGE-RESPONSE],<br/>[TRUTHFUL-REPORT] and [MESSAGE-RESPONSE] -> NOTHING.<br/>([RESEARCH] -> [TRUTHFUL-REPORT], but by way of<br/>the summary phase above, never from here.)

    note right of Working
        An INTERRUPTED agent has an EMPTY slot.
        Sending a REQUEST ([RESEARCH], [ERROR],
        [QUERY]) interrupts THE SENDER: its remote
        is stopped, its task is pushed back paused,
        the slot is emptied, partners.interrupted
        is set, and its drain thread is stopped and
        deregistered. The recipient is untouched --
        it just finds a job in its queue.

        Nothing occupies the slot meanwhile. There
        is no placeholder, because a placeholder is
        a row a reader could mistake for work.

        The flag is not redundant with the empty
        slot: a slot is ALSO empty between two
        ordinary tasks, and there the thread is
        still running and should promote the next
        row. The flag is what tells them apart.

        Only a FRESH RESPONSE restarts it --
        [MESSAGE-RESPONSE] or [TRUTHFUL-REPORT],
        chosen BY LABEL (a response need not
        outrank what is queued) and required to be
        unpaused (else the agent's own pushed-back
        response would undo the interruption).
    end note

    note left of Summary
        The reply for two of the five labels is
        NOTHING. Without a terminating label,
        every completed task would produce a
        message that produced a task, and two
        agents would talk until one was archived.
    end note
